--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -437,40 +437,19 @@
 		gap: 10px;
 	}
 
-	.card {
-		border: 1px solid #ccc;
-		padding: 15px;
-		border-radius: 10px;
-		margin-bottom: 15px;
-		box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-		position: relative;
-		min-width: 215px;
-		margin-top: 15px;
-		margin-right: 15pc;
-	}
-
-	.card-title {
-		font-size: 1.25rem;
-		font-weight: bold;
-	}
-
-	.card-text {
-		font-size: 1rem;
-	}
-
 	.delete-btn {
-		position: absolute; /* Position it absolutely within the card */
-		top: 10px; /* Adjust as needed */
-		right: 5px; /* Adjust as needed */
-		border: none; /* Remove border */
-		background: transparent; /* Make background transparent */
-		font-size: 18px; /* Adjust size */
-		color: #fff; /* Change color to white */
-		cursor: pointer; /* Change cursor to pointer */
+		position: absolute; 
+		top: 10px;
+		right: 10px;
+		border: none; 
+		background: transparent; 
+		font-size: 30px; 
+		color: black ;
+		cursor: pointer; 
 	}
 
 		.delete-btn:hover {
-			color: #ff0000; /* Change color on hover */
+			color: #ff0000; 
 		}
 
 	.ctnleaveForm{
@@ -855,27 +834,68 @@
 		font-weight: 600;
 	}
 
-
-	.notification-box {
-		display: none; /* Ẩn thông báo mặc định */
-		position: fixed; /* Đặt vị trí cố định trên màn hình */
-		top: 50%; /* Căn giữa theo trục dọc */
-		left: 50%; /* Căn giữa theo trục ngang */
-		transform: translate(-50%, -50%); /* Dịch chuyển để khung nằm chính giữa */
-		padding: 20px;
-		margin: 0; /* Xóa margin để không ảnh hưởng đến vị trí */
-		border: 1px solid #ccc;
-		background-color: #e0f7fa;
-		border-radius: 5px;
-		width: 50%; /* Độ rộng bằng 50% màn hình, có thể tùy chỉnh */
-		max-width: 400px; /* Giới hạn độ rộng tối đa */
-		box-sizing: border-box;
-		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Tạo hiệu ứng đổ bóng */
-		z-index: 1000; /* Đảm bảo khung nằm trên các thành phần khác */
-        }
 .btn:hover{
 			background-color: lightgray;
 }
+.btn-nghiphep{
+	background-color: rgb(74, 113, 255); 
+    color: white;             
+    border: none;           
+    border-radius: 8px;      
+    padding: 5px;     
+    font-size: 16px; 
+	font-weight:bold;
+    cursor: pointer; 
+	font-family: 'Itim', serif;
+}
+	.btn-nghiphep:hover {
+		background-color: #2000ff; 
+		color:white;
+	}
+.card-letter {
+	margin-top:20px;
+	border-radius: 20px;
+	padding: 20px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease;
+	position: relative;
+}
+
+	.card-letter:hover {
+		transform: translateY(-5px);
+	}
+.btn-duyet {
+    background-color: #28a745; 
+    color: white;            
+    border: none;            
+    border-radius: 5px;       
+    padding: 4px 8px;       
+    margin-right: 10px;        
+    font-size: 16px;   
+	font-family: 'Itim', serif;
+}
+.btn-tu-choi {
+    background-color: #dc3545; 
+    color: white;             
+    border: none;             
+    border-radius: 5px;      
+    padding: 4px 8px;        
+    font-size: 16px;          
+	font-family: 'Itim', serif;
+}
+
+.card-text{
+	font-size:16px;
+	font-family: 'Itim', serif;		
+}
+
+.card-title{
+	font-size:16px;
+	font-family: 'Itim', serif;
+	margin-top: 0;
+	font-weight:bold;
+}
+
 </style>
 
 <style>
@@ -1025,6 +1045,7 @@
 .button_btnBaiGiang.focus .loading_btnBaiGiang {
 	stroke-dasharray: 100 0; /* Hiển thị thanh tiến trình */
 }
+
 </style>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -1500,65 +1521,65 @@
 @{
 	if (Model.CustomRubric == false)
 	{
-				<div id="bangdiem" class="tabcontent">
-					@{
-				List<BaiTap> bt = ViewBag.ListBT as List<BaiTap>;
-				List<DiemViewModel> diems = ViewBag.ListDiem as List<DiemViewModel>;
+		<div id="bangdiem" class="tabcontent">
+			@{
+		List<BaiTap> bt = ViewBag.ListBT as List<BaiTap>;
+		List<DiemViewModel> diems = ViewBag.ListDiem as List<DiemViewModel>;
+			}
+			<div class="container-bangdiem">
+				<table id="user">
+					<thead>
+						<tr class="first-column">
+							<th style="text-align: center;" rowspan="2">Họ và tên</th>
+							<th style="text-align: center;" rowspan="2">MSSV</th>
+							<th style="text-align: center;" colspan="@bt.Count">Bài Tập</th>
+							<th style="text-align: center;" rowspan="2">ÐTB</th>
+						</tr>
+						<tr>
+							@foreach (var item in bt)
+					{
+								<th style="text-align: center;">@item.Title</th>
 					}
-					<div class="container-bangdiem">
-						<table id="user">
-							<thead>
-								<tr class="first-column">
-									<th style="text-align: center;" rowspan="2">Họ và tên</th>
-									<th style="text-align: center;" rowspan="2">MSSV</th>
-									<th style="text-align: center;" colspan="@bt.Count">Bài Tập</th>
-									<th style="text-align: center;" rowspan="2">ÐTB</th>
-								</tr>
-								<tr>
-									@foreach (var item in bt)
-							{
-										<th style="text-align: center;">@item.Title</th>
-							}
-								</tr>
-							</thead>
-							<tbody>
-								@foreach (var item in diems)
-						{
-									<tr>
-										<td>@item.HoVaTen</td>
-										<td>@item.MSSV</td>
+						</tr>
+					</thead>
+					<tbody>
+						@foreach (var item in diems)
+				{
+							<tr>
+								<td>@item.HoVaTen</td>
+								<td>@item.MSSV</td>
 
-										@if (bt.Count <= 0)
-								{
-											<td> </td>
-								}
-								else
-								{
-											@foreach (var d in @item.listDiemBT)
-									{
-												<td style="text-align: center;">@d</td>
-									}
-								}
-										<td>@item.DTB</td>
-									</tr>
+								@if (bt.Count <= 0)
+						{
+									<td> </td>
 						}
-							</tbody>
-						</table>
-					</div>
-				</div>
+						else
+						{
+									@foreach (var d in @item.listDiemBT)
+							{
+										<td style="text-align: center;">@d</td>
+							}
+						}
+								<td>@item.DTB</td>
+							</tr>
+				}
+					</tbody>
+				</table>
+			</div>
+		</div>
 	}
 	else
 	{
-				<div id="bangdiemCustom" class="tabcontent">
-					<iframe style="border: none;" src="@Url.Action("Details", "Rubrics", new { id = Model.Rubric.Id, classRoomId = Model.ClassRoom.Id, isowner = Model.isOwner})" width="100%" height="600px"></iframe>
-				</div>
+		<div id="bangdiemCustom" class="tabcontent">
+			<iframe style="border: none;" src="@Url.Action("Details", "Rubrics", new { id = Model.Rubric.Id, classRoomId = Model.ClassRoom.Id, isowner = Model.isOwner})" width="100%" height="600px"></iframe>
+		</div>
 	}
 }
 <div id="padlet" class="tabcontent">
 	<div class="padlet-embed" style="border:1px solid rgba(0,0,0,0.1);border-radius:2px;box-sizing:border-box;overflow:hidden;position:relative;width:100%;background:#F4F4F4"><p style="padding:0;margin:0"><iframe src="https://padlet.com/embed/lup9um2r33899yju" frameborder="0" allow="camera;microphone;geolocation" style="width:100%;height:608px;display:block;padding:0;margin:0"></iframe></p><div style="display:flex;align-items:center;justify-content:end;margin:0;height:28px"><a href="https://padlet.com?ref=embed" style="display:block;flex-grow:0;margin:0;border:none;padding:0;text-decoration:none" target="_blank"><div style="display:flex;align-items:center;"><img src="https://padlet.net/embeds/made_with_padlet_2022.png" width="114" height="28" style="padding:0;margin:0;background:0 0;border:none;box-shadow:none" alt="Made with Padlet"></div></a></div></div>
 </div>
 <div id="letter" class="tabcontent">
-	<button type="button" class="btn btn-primary" onclick="toggleLeaveRequestForm()">Tạo đơn xin nghỉ phép</button>
+	<button type="button" class="btn btn-nghiphep" onclick="toggleLeaveRequestForm()">Tạo đơn xin nghỉ phép</button>
 	<div id="leaveRequestFormContainer" style="display:none; margin-top: 20px;">
 		<form id="leaveRequestForm">
 			<input type="hidden" name="Id" value="0" />
@@ -2980,15 +3001,15 @@ function submitLeaveRequest(event) {
 
 	function createLeaveRequestCard(request) {
 		const card = document.createElement('div');
-		card.classList.add('card', 'h-100', 'position-relative'); // Ensure cards are equal height
+		card.classList.add('card-letter', ); // Ensure cards are equal height
 
 		// Set the background color based on status
 		if (request.status === 0) {
-			card.style.backgroundColor = 'yellow'; // Background color for status 0
+			card.style.backgroundColor = '#fff26a'; // Background color for status 0
 		} else if (request.status === 1) {
-			card.style.backgroundColor = 'lightgreen'; // Background color for status 1
+			card.style.backgroundColor = '#76ff93'; // Background color for status 1
 		} else if (request.status === -1) {
-			card.style.backgroundColor = 'lightcoral'; // Background color for status -1
+				card.style.backgroundColor = '#ff8c8c'; // Background color for status -1
 		}
 
 		const cardBody = document.createElement('div');
@@ -3027,7 +3048,7 @@ function submitLeaveRequest(event) {
 				// Tạo button Duyệt
 				const approveButton = document.createElement('button');
 				approveButton.textContent = 'Duyệt';
-				approveButton.classList.add('btn', 'btn-success', 'mr-2');
+				approveButton.classList.add('btn-duyet');
 				approveButton.onclick = function () {
 					updateLeaveRequestStatus(request.id, 1); // 1 cho "Đã duyệt"
 				};
@@ -3035,7 +3056,7 @@ function submitLeaveRequest(event) {
 				// Tạo button Từ chối
 				const rejectButton = document.createElement('button');
 				rejectButton.textContent = 'Từ chối';
-				rejectButton.classList.add('btn', 'btn-danger');
+				rejectButton.classList.add('btn-tu-choi');
 				rejectButton.onclick = function () {
 					updateLeaveRequestStatus(request.id, -1); // -1 cho "Đã từ chối"
 				};
