--- a/DoAnMon/Views/Home/Index.cshtml
+++ b/DoAnMon/Views/Home/Index.cshtml
@@ -150,7 +150,7 @@
         <div class="below-slider">
             <p style="text-align:center; font-size:16px; font-weight:bold">TRUY CẬP NHANH </p>
             <p style="text-align:left; font-size:14px;"><a href="https://sinhvien.hutech.edu.vn/#/sinhvien/login/login">Sinh viên Hutech</a></p>
-            <p style="text-align:left; font-size:14px; "><a href="https://daotao.hutech.edu.vn/>">Cổng Thông Tin Đào Tạo</a></p>
+            <p style="text-align:left; font-size:14px; "><a href="https://daotao.hutech.edu.vn/">Cổng Thông Tin Đào Tạo</a></p>
             <p style="text-align:left; font-size:14px;"><a href="https://e-graduate.hutech.edu.vn/">E-Learning Hutech</a></p>
             <p style="text-align:left; font-size:14px;"><a href="https://itcoder.hutech.edu.vn/?fbclid=IwZXh0bgNhZW0CMTEAAR1_dTRkcC1NyWZiEPGYpgKG0pDmztI0nCR3DEPiZIeGGeTmTEydrsVUe0o_aem_e7PLpYTeUkRbYjIX8doOIw">ITCoder HUTECH</a></p>
             <p style="text-align:left; font-size:14px;"><a href="https://chatgpt.com/">Chat GPT</a></p>
