Sửa xong lỗi không truy cập vào sửa profile của identity và change password

--- a/DoAnMon/Views/ClassRooms/Create.cshtml
+++ b/DoAnMon/Views/ClassRooms/Create.cshtml
@@ -36,7 +36,7 @@
 </head>
 <body>
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #00CA79;padding: 0 5;">
+	<nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #7BD3EA;padding: 0 5;">
 		<a asp-controller="ClassRooms" asp-action="Index" class="navbar-brand" style="font-family: 'Roboto Slab', sans-serif; padding: 0;">
 			<img style="padding: 0;" src="~/images/xanh.png" alt="Logo" width="70" height="auto" />
 		</a>
@@ -50,7 +50,7 @@
 	</nav>
 	<div class="container-fluid mt-5" style="font-family: 'Montserrat', sans-serif">
 		<h2 class="page-title" style="font-family: 'Roboto Slab', sans-serif;">Quản lý phòng học</h2>
-		<div class="card">
+		<div class="card" style="background-color: #F6F7C4;">
 			<div class="card-body">
 				<div class="row mt-4">
 					<div class="col-12" style="text-align: center;">
