--- a/DoAnMon/Views/Home/Index.cshtml
+++ b/DoAnMon/Views/Home/Index.cshtml
@@ -294,7 +294,7 @@
         fetchPosts(); // Gọi hàm lấy dữ liệu bài đăng
     });
 </script> 
-<script>
+@* <script>
     document.addEventListener('DOMContentLoaded', (event) => {
         const dropbtn = document.querySelector('.btnchude');
         const dropdownContent = document.querySelector('.chude-content');
@@ -310,4 +310,4 @@
         });
     });
 
-</script>
+</script> *@
