sửa lỗi conflixt

--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@using DoAnMon.IdentityCudtomUser
+﻿﻿@using DoAnMon.IdentityCudtomUser
 @using Microsoft.AspNetCore.Identity
 @inject ICheckNop CheckNop
 
@@ -3576,4 +3576,3 @@ function submitLeaveRequest(event) {
 		});
 	});
 </script> @*Xoá lớp*@
-
